Web: ugly index.html overflow fix.

--- a/web/website/src/index.css
+++ b/web/website/src/index.css
@@ -157,6 +157,9 @@ body {
     font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    /* a bit ugly, maybe there is a better way.*/
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 code {
